# skr

./: .gitignore  .gitmodules  a.txt  agora_op.sh  apk_canary.json  apk_canary.sh  base_lib.gradle  boost分析.md  build.gradle  buildjar_copy.sh  compressApk.sh  config.gradle  dump_memory.sh  gradle.properties  import-summary.txt  ins.sh  ins_nobuild.sh  install.md  install.sh  local.properties  log_anr.sh  log_cat.sh  log_engine.sh  log_grab.sh  log_pull_doraemon.sh  log_push.sh  log_rc.sh  myandroidlog.sh  mypython.sh  pk流程分析.md  plugintest.sh  readme.md  rename_galileo_lib.sh  run_systemtrace.sh  send_trim_memory.sh  settings.gradle  testGradleInject.sh  test_wire.sh  tinypng.sh  tinypng_record.txt  (+7 more)
aardemo/: build.gradle  (+2 more)
baseLibrary/enginesdk/: CMakeLists.txt  build.gradle
baseLibrary/enginesdk/src/main/: AndroidManifest.xml
baseLibrary/enginesdk/src/main/cpp/audio_effect_filter/: audio_effect_filter_factory.cpp  audio_effect_filter_factory.h
baseLibrary/enginesdk/src/main/cpp/camera_preview/: mv_recording_preview_controller.cpp  recording_preview_renderer.cpp
baseLibrary/enginesdk/src/main/cpp/external_audio_effect/: SMAudioEffectProcessor.h
baseLibrary/enginesdk/src/main/cpp/external_audio_effect/reverb_inc/: CReverb.h  KalaInterfaces.h
baseLibrary/enginesdk/src/main/cpp/external_audio_effect/reverb_src/: CReverb.cpp  CReverb4.cpp
baseLibrary/enginesdk/src/main/cpp/external_audio_effect/reverb_src/BiquadFilters/: BiquadFilter.cpp  LPFilter.cpp  NTFilter.cpp
baseLibrary/enginesdk/src/main/cpp/external_audio_effect/reverb_src/openal/: arp_config.h  arp_context.h  arp_effect_api.cpp  arp_filter.cpp  arp_fixed_generic.h  arp_platform.h
baseLibrary/enginesdk/src/main/cpp/one/: CMakeLists.txt
baseLibrary/enginesdk/src/main/cpp/one/audio_effect/: audio_effect_adapter.h
baseLibrary/enginesdk/src/main/cpp/one/audio_effect_filter/: audio_effect_filter_chain.cpp  audio_effect_filter_chain.h
baseLibrary/enginesdk/src/main/cpp/one/audio_effect_processor/: audio_effect_processor_factory.cpp  audio_effect_processor_factory.h
baseLibrary/enginesdk/src/main/cpp/one/common/: CommonTools.h
baseLibrary/enginesdk/src/main/cpp/one/external_audio_effect/: SMAudioEffectProcessor.cpp
baseLibrary/enginesdk/src/main/cpp/one/external_audio_effect/reverb_inc/: BiquadFilter.h  CFilters.h  CReverb4.h  MSdcommon.h  phonograph.h  slowFlanger.h
baseLibrary/enginesdk/src/main/cpp/one/external_audio_effect/reverb_src/: CFilters.cpp  phonograph.cpp  slowFlanger.cpp
baseLibrary/enginesdk/src/main/cpp/one/score_processor/fft_wrapper/: fft_routine.h  fft_wrapper.hpp  mayer_fft.cpp
baseLibrary/enginesdk/src/main/cpp/one/score_processor/mel/: mel_chord_ana.cpp  scale_analyze.cpp  scale_analyze.h
baseLibrary/enginesdk/src/main/cpp/one/score_processor/score/: base_scoring.cpp  base_scoring.h  pitch_scoring.cpp  pitch_scoring.h  record_level.cpp  record_level.h  record_level_queue.cpp
baseLibrary/enginesdk/src/main/cpp/one/score_processor/score2/: audio_engine_common.h  audio_exception.hpp  autorap_util.hpp  calc_score.cpp  calc_score.hpp  pitch_detection.cpp  pitch_detection.hpp  scoring2_adapter.cpp  scoring2_adapter.h  slide_window.hpp
baseLibrary/enginesdk/src/main/cpp/score_processor/fft_wrapper/: fft_wrapper.cpp  mayer_fft.h
baseLibrary/enginesdk/src/main/cpp/score_processor/mel/: mel_chord_ana.cpp  mel_chord_ana.h  mel_types.h
baseLibrary/enginesdk/src/main/cpp/score_processor/score/: base_scoring.cpp  base_scoring.h  pitch_scoring.cpp  pitch_scoring.h  record_level_queue.h
baseLibrary/enginesdk/src/main/cpp/three/test/: runPYinScore.cpp
baseLibrary/enginesdk/src/main/cpp/two/: .gitignore  CMakeLists.txt
baseLibrary/enginesdk/src/main/cpp/two/Delay/Delay_LIB/: Delay_SDK_API.h  Delay_control.h  SKR_Delay.c
baseLibrary/enginesdk/src/main/cpp/two/amplitude/AGC_LIB/: AGC_SDK_API.h  AGC_control.h  SKR_AGC.c  SKR_AGC_ECNLP.c  SKR_AGC_MIC.c  SKR_AGC_VAD.c  SKR_AGC_clipping.c  SKR_AGC_curve.c  SKR_AGC_defines.h  SKR_AGC_functions.h  SKR_AGC_noise.c  SKR_AGC_tables.h  SKR_AGC_typedefs.h
baseLibrary/enginesdk/src/main/cpp/two/amplitude/DCC_LIB/: DCC_SDK_API.h  DCC_control.h  SKR_DCC.c
baseLibrary/enginesdk/src/main/cpp/two/amplitude/Dynamic_LIB/: Dynamic_SDK_API.h  Dynamic_control.h  SKR_Dynamic.c  SKR_Dynamic_defines.h  SKR_Dynamic_functions.h  SKR_Dynamic_gains.c  SKR_Dynamic_typedefs.h
baseLibrary/enginesdk/src/main/cpp/two/amplitude/Level_LIB/: Level.c  Level_SDK_API.h  Level_control.h  Level_defines.h
baseLibrary/enginesdk/src/main/cpp/two/amplitude/libvoln/: libvoln.c  libvoln.h
baseLibrary/enginesdk/src/main/cpp/two/common/: DFTs.c  DFTs.h  FDA.c  basicthings.c  chanelconvert.c  defines.h  functions.h
baseLibrary/enginesdk/src/main/cpp/two/effect/Plugin_conv_reverb/: CovReverb_SDK_API.h  CovReverb_control.h  SKR_CovReverb.c  cd.c  cd.h  jucam.c  jucam.h  lowshower.c  lowshower.h  shower.c  shower.h  smallhamon.c  smallhamon.h  smokeybar.c  smokeybar.h  tandc.c  tandc.h  thetrackingroom.c  thetrackingroom.h
baseLibrary/enginesdk/src/main/cpp/two/effect/effect_LIB/: SKR_effect.c  effect_SDK_API.h  effect_control.h
baseLibrary/enginesdk/src/main/cpp/two/filter/Filter_LIB/: Filter_SDK_API.h  Filter_control.h  SKR_Filter.c
baseLibrary/enginesdk/src/main/cpp/video_encoder/soft_encoder/: soft_encoder_adapter.cpp
baseLibrary/enginesdk/src/main/java/com/engine/: CdnInfo.java  ConfigFromServer.java  EngineConfigFromServer.java  EngineEvent.java  EngineManager.java  Params.java  UserStatus.java
baseLibrary/enginesdk/src/main/jni/: IFAudioEffectEngine.cpp  media_ushow_audio_effect_IFAudioEffectEngine.h  native-lib.cpp
baseLibrary/enginesdk/src/main/jni/one/: CbEffectProcessor.cpp  CbScoreProcessor.cpp  IFAudioEffectEngine.cpp  com_engine_effect_ICbEffectProcessor.h  com_engine_score_ICbScoreProcessor.h  media_ushow_audio_effect_IFAudioEffectEngine.h  native-lib1.cpp
baseLibrary/enginesdk/src/main/jni/two/: TbAgcProcessor.cpp  TbEffectProcessor.cpp  com_engine_effect_ITbAgcProcessor.h  com_engine_effect_ITbEffectProcessor.h  native-lib2.cpp
(+13006 files in other folders)
